2008-09-21	Mike Massonnet <mmassonnet@xfce.org>
	* Fix build for libtool 2.2 (or at least for ArchLinux)

2008-03-04	Mike Massonnet <mmassonnet@xfce.org>

	* === Release 0.8.1 ===
	* INSTALL: Delete autogenerate file
	* COPYING: Fix licence to GPL2 as it is the case for the c sources
	* configure.in.in: Bump minimum Xfce versions to 4.4.0
	* panel-plugin/clipman.c:
	  - (clipman_create_title) Generate fine UTF-8 titles with ellipsis (bug #3304)
	  - (clipman_create_menuitem) Use gtk_menu_item_new_with_label which
	  aligns the label on the left by default

2006-01-17	Nick Schermer <nick@xfce.org>

	* Improve configure files and Makefiles.
	* A huge version bump: we going from 0.5.99.1 to 0.8.0 for
	  the Xfce 4.4.0 release. This because there was an experimental
	  version with the 0.6.4 version number (not very smart, I know),
	  so this will make it easier for distros (Ubuntu) to update the
	  package.

2006-12-20	Nick Schermer <nick@xfce.org>

	* panel-plugin/clipman-dialog.c: Add help button with
	  exo-open to clipman wiki website.
	* po/*.po: Merge new string

2006-09-20	Nick Schermer <nick@xfce.org>

	* Removed all the toolips in the configure dialog and
	  added a help button (launch exo-open).

2006-09-10	Nick Schermer <nick@xfce.org>

	* Fix typo in tooltip

2006-09-05	Nick Schermer <nick@xfce.org>

	* Fix typo in desktop file

2006-09-05	Nick Schermer <nick@xfce.org>

	* Improve Makefile.am files. Make distcheck works
	  without any problems now.

2006-09-05	Nick Schermer <nick@xfce.org>

	* Bump version to 0.5.99.1 (0.6rc1)
	* Depend on Xfce4-panel 4.3.99.1

2006-09-02	Nick Schermer <nick@xfce.org>

	* Remove executable bits
	* Update ChangeLog

2006-08-11	Nick Schermer <nick@xfce.org>

	* Depend on xfce4-panel rev 22703, libxfcegui4 4.3.90.2 and
	  libxfce4util 4.3.90.2
	* Remove the old header code for < 4.3.90.2

2006-08-10	Nick Schermer <nick@xfce.org>

	* add xfce4-clipman-plugin basque translation

2006-08-09	Nick Schermer <nick@xfce.org>
